# aoc-2021

./: Cargo.toml  README.md
day1/: main.rs  part1.rs
day10/: main.rs
day11/: main.rs
day2/: main.rs  part1.rs  part2.rs
day3/: main.rs
day4/: main.rs
day5/: main.rs
day6/: main.rs
day7/: main.rs
day8/: main.rs
day9/: main.rs
