[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day1-1"
path = "day1/part1.rs"

[[bin]]
name = "day1-2"
path = "day1/part2.rs"

[[bin]]
name = "day2-1"
path = "day2/part1.rs"

[[bin]]
name = "day2-2"
path = "day2/part2.rs"
